<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/h"
            android:title="@string/menu_home" />
    </group>
    <item android:title="@string/loginh">
        <menu>
        <item
            android:id="@+id/nav_lawyer"
            android:icon="@drawable/lr"
            android:title="@string/lawyer" />
        <item
            android:id="@+id/nav_client"
            android:icon="@drawable/ct"
            android:title="@string/client" />
        </menu>
    </item>
    <item android:title="@string/changeh">
    <menu>
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_tools" />
    </menu>
    </item>

    <item android:title="@string/communicateh">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_contact"
                android:icon="@drawable/cu"
                android:title="@string/contact_us" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/au"
                android:title="@string/about_us" />
        </menu>
    </item>
    <item
        android:id="@+id/nav_exit"
        android:icon="@drawable/ex"
        android:title="@string/exit" />

</menu>
