<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/h"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_appointment"
            android:icon="@drawable/app"
            android:title="@string/view_appointmnetlr" />
        <item
            android:id="@+id/nav_comment"
            android:icon="@drawable/cmt"
            android:title="@string/give_appointment_commentlr" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_tools" />
    </group>

    <item android:title="@string/communicatelr">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_contact"
                android:icon="@drawable/cu"
                android:title="@string/contact_uslr" />
        </menu>
    </item>

</menu>
