<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.zack.ok.bzhc.lcomment"
    android:background="@color/colorText"
    android:orientation="vertical">
    <EditText
        android:id="@+id/etFullName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_your_namelc"
        android:inputType="textPersonName"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="0dp"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginRight="0dp"
        />
    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_correct_emaillc"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@+id/etFullName"/>

    <EditText
        android:id="@+id/etContactno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_your_phone_numberlc"
        android:inputType="textPersonName"
        app:layout_constraintTop_toBottomOf="@+id/etEmail"/>
    <EditText
        android:id="@+id/etMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/write_your_appointment_comment_herelc"
        android:inputType="textEmailSubject"
        app:layout_constraintTop_toBottomOf="@+id/etContactno"/>

    <Button
        android:background="@color/colorPrimaryDark"
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submitlc"
        android:textColor="@color/colorAccent"
        android:layout_marginLeft="90dp"
        android:layout_marginRight="90dp"
        app:layout_constraintTop_toBottomOf="@+id/etMessage" />


</androidx.constraintlayout.widget.ConstraintLayout>