<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.zack.ok.bzhc.LoginActivity"
    android:paddingTop="100dp"
    app:passwordToggleEnabled="true"
    android:background="@color/colorBack">


<ImageView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:src="@drawable/ct"/>
    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:hint="@string/enter_correct_emailcl"
        android:inputType="textEmailAddress"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:passwordToggleEnabled="true">
    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:ems="10"
        android:hint="@string/enter_passwordcl"
        android:inputType="textPassword"
         />
        <Button
            android:id="@+id/btnLogin"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"
            android:textColor="@color/colorAccent"
            android:background="@color/colorPrimaryDark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/logincl"
            />
        <TextView
            android:id="@+id/tvRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="all"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="50dp"
            android:text="@string/if_you_don_t_have_an_account_yet_register_here"
            android:textColor="@color/colorPrimaryDark"
            />
    </com.google.android.material.textfield.TextInputLayout>



</LinearLayout>

