<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBack"
    android:paddingTop="250dp"
    app:passwordToggleEnabled="true"
    tools:context="com.zack.ok.bzhc.LoginActivity"
    >
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/lr"/>
    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_correct_emailll"
        android:inputType="textEmailAddress"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
         />
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:passwordToggleEnabled="true">
    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_passwordl"
        android:inputType="textPassword"
        android:layout_marginRight="35dp"
        android:layout_marginLeft="35dp"
       />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/loginl"
        android:textColor="@color/colorAccent"
       />
    </com.google.android.material.textfield.TextInputLayout>
</LinearLayout>
